[gd_scene load_steps=18 format=2]

[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://entities/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/EnemySpawnTimer.gd" type="Script" id=5]
[ext_resource path="res://entities/NPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://textures/shield.png" type="Texture" id=7]
[ext_resource path="res://Background.tscn" type="PackedScene" id=8]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://textures/slow_motion.png" type="Texture" id=10]

[sub_resource type="GDScript" id=2]
script/source = "tool
extends NPC
class_name Pickup

var pickable := true setget set_pickable, get_pickable

func set_pickable(value: bool) -> void:
	set_collision_mask_bit(0, value)

func get_pickable() -> bool:
	return get_collision_mask_bit(0)

func _on_area_entered(_area: Area2D):
	queue_free()
"

[sub_resource type="PackedScene" id=3]
_bundled = {
"base_scene": 0,
"conn_count": 1,
"conns": PoolIntArray( 1073741826, 1073741825, 8, 7, 2, 0 ),
"editable_instances": [  ],
"names": PoolStringArray( "Pickup", "pickups", "collision_layer", "collision_mask", "script", "VisibilityNotifier2D", "rect", "_on_area_entered", "area_entered" ),
"node_count": 2,
"node_paths": [ NodePath("."), NodePath("."), NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 2147483647, 0, -1, 3, 2, 1, 3, 2, 4, 3, 1, 1, 1073741824, -1, 2147483647, 786437, -1, 1, 6, 4, 0 ),
"variants": [ ExtResource( 6 ), 4, 1, SubResource( 2 ), Rect2( -8, -8, 16, 16 ) ],
"version": 2
}

[sub_resource type="GDScript" id=4]

[sub_resource type="PackedScene" id=5]
_bundled = {
"base_scene": 0,
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "Invulnerability", "position", "script", "Sprite", "texture" ),
"node_count": 2,
"node_paths": [ NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 2147483647, 0, -1, 2, 1, 1, 2, 2, 0, 1073741824, -1, 2147483647, 262147, -1, 1, 4, 3, 0 ),
"variants": [ SubResource( 3 ), Vector2( 0, -0.44545 ), SubResource( 4 ), ExtResource( 7 ) ],
"version": 2
}

[sub_resource type="GDScript" id=6]
script/source = "
"

[sub_resource type="PackedScene" id=7]
_bundled = {
"base_scene": 0,
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "SlowMotion", "position", "script", "Sprite", "texture" ),
"node_count": 2,
"node_paths": [ NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 2147483647, 0, -1, 2, 1, 1, 2, 2, 0, 1073741824, -1, 2147483647, 262147, -1, 1, 4, 3, 0 ),
"variants": [ SubResource( 3 ), Vector2( 0, -0.44545 ), SubResource( 6 ), ExtResource( 10 ) ],
"version": 2
}

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
main_menu_scene = "res://menus/MainMenu.tscn"
Player = ExtResource( 1 )
Enemy = ExtResource( 3 )
Pickups = [ SubResource( 5 ), SubResource( 7 ) ]

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" parent="BackgroundLayer" instance=ExtResource( 8 )]

[node name="SlowMotion" type="ColorRect" parent="BackgroundLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0.960784, 0, 0.219608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 5 )
initial_wait_time = 1.0
wait_time_decrement = 0.025

[node name="NPCSpawner" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnPosition" type="PathFollow2D" parent="NPCSpawner"]
rotate = false

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUDLayer" instance=ExtResource( 4 )]
margin_top = -1.25993
margin_bottom = -1.25995

[node name="PauseMenu" parent="HUDLayer" instance=ExtResource( 9 )]
visible = false
[connection signal="level_changed" from="." to="HUDLayer/HUD" method="_on_Main_level_changed"]
[connection signal="score_changed" from="." to="HUDLayer/HUD" method="_on_Main_score_changed"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="hide" from="HUDLayer/PauseMenu" to="." method="_on_PauseMenu_hide"]
